--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-numpy~=1.19.5
-pandas~=1.2.4
+numpy==1.20.3
+pandas==1.3.1
 pytorch-forecasting==0.9.0
 pytorch-lightning==1.4.1
+statsmodels==0.12.2
